Fixed bug where top part got squashed.

--- a/frontend/src/components/Landing/landing.css
+++ b/frontend/src/components/Landing/landing.css
@@ -19,6 +19,7 @@
 }
 .top {
   height: 10%;
+  min-height: 80px;
   width: 100%;
 }
 .bottom {
