--- a/frontend/src/components/LikesAndMessages/likesAndMessages.css
+++ b/frontend/src/components/LikesAndMessages/likesAndMessages.css
@@ -1,6 +1,6 @@
 .likesOrMessages {
   background-color: #f6f6f6;
-  font-size: calc(0.7rem + 1vw);
+  font-size: calc(0.6rem + 1vw);
   padding-bottom: 1vw;
   padding-top: 10px;
 }
